# notesock

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
contrib/: fail2ban-example.conf  nginx-example.conf  systemd-example.env  systemd-example.service
src/: id_gen.rs  main.rs
systemd/: notesock.env  notesock.service
